{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "e7644e2d-cac4-45b9-82c5-b5bc1dc3b095",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "56b988c9-f8dc-4b11-b575-f84b65e03f2b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "5442a78b-1824-4c71-8b24-b29d61d6e33f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b32f6468-e2b2-4f8b-b85c-eaa1c99a0b56",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.4,pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50aa1310-b0d7-46b8-8f0b-eea3b43ec68b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap(duration=0.2,pressPoint=0.5),SlowTap(duration=0.5,pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}